# rpi-rgb-led-matrix

./: CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
bindings/python/rgbmatrix/: core.pyx  graphics.pyx
bindings/python/rgbmatrix/shims/: pillow.c
